--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -1,7 +1,7 @@
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/StarterContent/Maps/Minimal_Default
 GameDefaultMap=/Game/StarterContent/Maps/Minimal_Default
-GlobalDefaultGameMode=/Game/Bluprint/GameModIgrok.GameModIgrok_C
+GlobalDefaultGameMode=/Script/Engine.GameModeBase
 
 [/Script/Engine.Engine]
 +ActiveGameNameRedirects=(OldGameName="TP_Blank",NewGameName="/Script/MetroGameNetwork")
@@ -13,4 +13,3 @@ TargetedHardwareClass=Desktop
 AppliedTargetedHardwareClass=Desktop
 DefaultGraphicsPerformance=Maximum
 AppliedDefaultGraphicsPerformance=Maximum
-
